; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c___tl_raw_msg_fetch_mark.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c___tl_raw_msg_fetch_mark.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.raw_message = type { i32 }

@TL_IN_MARK = common dso_local global %struct.raw_message* null, align 8
@TL_IN_RAW_MSG = common dso_local global i32 0, align 4
@TL_IN_POS = common dso_local global i32 0, align 4
@TL_IN_MARK_POS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @__tl_raw_msg_fetch_mark to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__tl_raw_msg_fetch_mark() #0 {
  %1 = alloca %struct.raw_message*, align 8
  %2 = load %struct.raw_message*, %struct.raw_message** @TL_IN_MARK, align 8
  %3 = icmp ne %struct.raw_message* %2, null
  %4 = xor i1 %3, true
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert(i32 %5)
  %7 = call %struct.raw_message* @zmalloc(i32 4)
  store %struct.raw_message* %7, %struct.raw_message** %1, align 8
  %8 = load %struct.raw_message*, %struct.raw_message** %1, align 8
  %9 = load i32, i32* @TL_IN_RAW_MSG, align 4
  %10 = call i32 @rwm_clone(%struct.raw_message* %8, i32 %9)
  %11 = load %struct.raw_message*, %struct.raw_message** %1, align 8
  store %struct.raw_message* %11, %struct.raw_message** @TL_IN_MARK, align 8
  %12 = load i32, i32* @TL_IN_POS, align 4
  store i32 %12, i32* @TL_IN_MARK_POS, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local %struct.raw_message* @zmalloc(i32) #1

declare dso_local i32 @rwm_clone(%struct.raw_message*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
